# tiny-store

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run.sh  tree_instance
src/: CMakeLists.txt  b_plus_tree.cpp  b_plus_tree.h  file_handler.cpp  file_handler.h  main.cpp  rc.h
test/: CMakeLists.txt  multi_thread_test.cpp  test.cpp
